test_data/Xml/Unexpected/Unserializable/InvalidClassName/property/wrong.xml.exception
Expected an element representing an instance of class Property with element name property, but got: utterlyInvalid at: the beginning